Added custom tasks, among other things

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -18,6 +18,7 @@
     </header>
     <div id="control-panel">
       <button id="add-new-task">+ Add</button>
+      <!-- <button id="toggle-hide-on-blur">Toggle hide on blur</button> -->
     </div>
     <div id="task-container">
       
