--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/d8ce86934f.js" crossorigin="anonymous"></script>
   <script> var exports = {}; </script>
   <script defer src="./renderer.js"></script>
   <link rel="stylesheet" href="css/.MAIN.css">
@@ -17,7 +18,7 @@
       </div>
     </header>
     <div id="control-panel">
-      <button id="add-new-task">+ Add</button>
+      <button id="add-new-task"><i class="fa fa-plus"></i></button>
       <!-- <button id="toggle-hide-on-blur">Toggle hide on blur</button> -->
     </div>
     <div id="task-container">
